--- a/.github/workflows/application.yml
+++ b/.github/workflows/application.yml
@@ -31,7 +31,7 @@ jobs:
         strategy:
             fail-fast: false
             matrix:
-                php: ["8.0"]
+                php: ["8.0", "8.1"]
                 symfony: ["^4.4", "^5.4"]
 
         steps:
