--- a/src/Sylius/Bundle/CoreBundle/Resources/config/app/messenger.yaml
+++ b/src/Sylius/Bundle/CoreBundle/Resources/config/app/messenger.yaml
@@ -10,6 +10,7 @@ framework:
             'Sylius\Component\Promotion\Event\CatalogPromotionCreated': main
             'Sylius\Component\Promotion\Event\CatalogPromotionUpdated': main
             'Sylius\Component\Promotion\Event\CatalogPromotionEnded': main
+            'Sylius\Component\Core\Event\ProductVariantsToUpdated': main
 
         default_bus: sylius.command_bus
         buses:
