--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
         "ext-exif": "*",
         "ext-fileinfo": "*",
         "ext-gd": "*",
-        "api-platform/core": "^2.6",
+        "api-platform/core": "2.7.x@dev",
         "babdev/pagerfanta-bundle": "^2.5",
         "behat/transliterator": "^1.3",
         "doctrine/collections": "^1.6",
@@ -159,7 +159,6 @@
         "sylius/user-bundle": "self.version"
     },
     "conflict": {
-        "api-platform/core": "2.7.0",
         "doctrine/doctrine-bundle": "2.3.0",
         "jms/serializer-bundle": "3.9.0",
         "symfony/doctrine-bridge": "4.4.16",
