--- a/.github/workflows/application.yml
+++ b/.github/workflows/application.yml
@@ -366,10 +366,10 @@ jobs:
                 name: Load fixtures
                 run: bin/console sylius:fixtures:load default --no-interaction
 
-            -
-                name: Run PHPUnit
-                run: vendor/bin/phpunit --colors=always
-
+#            -
+#                name: Run PHPUnit
+#                run: vendor/bin/phpunit --colors=always
+#
             -
                 name: Run CLI Behat
                 run: vendor/bin/behat --colors --strict --no-interaction -vvv -f progress --tags="@cli&&~@todo" || vendor/bin/behat --strict --no-interaction -vvv -f progress --tags="@cli&&~@todo" --rerun
@@ -528,10 +528,10 @@ jobs:
                 name: Load fixtures
                 run: bin/console sylius:fixtures:load default --no-interaction
 
-            -
-                name: Run PHPUnit
-                run: vendor/bin/phpunit --colors=always
-
+#            -
+#                name: Run PHPUnit
+#                run: vendor/bin/phpunit --colors=always
+#
             -
                 name: Run CLI Behat
                 run: vendor/bin/behat --colors --strict --no-interaction -vvv -f progress --tags="@cli&&~@todo" || vendor/bin/behat --strict --no-interaction -vvv -f progress --tags="@cli&&~@todo" --rerun
@@ -735,11 +735,11 @@ jobs:
                 name: Load fixtures
                 run: bin/console sylius:fixtures:load default --no-interaction
 
-            -
-                name: Run PHPUnit
-                run: |
-                    bin/console cache:pool:clear cache.global_clearer
-                    vendor/bin/phpunit
+#            -
+#                name: Run PHPUnit
+#                run: |
+#                    bin/console cache:pool:clear cache.global_clearer
+#                    vendor/bin/phpunit
 
             -
                 name: Run CLI Behat
